css/index.css
@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Viga&display=swap");

@tailwind base;
@tailwind components;
@tailwind utilities;

h1 {
  @apply text-3xl;
}

h2 {
  @apply text-xl;
}

body {
  @apply bg-teal-dark;
}

nav {
  @apply flex items-center justify-between flex-wrap px-5 py-3 bg-gradient-to-b from-teal-light to-teal-dark;
}

main {
  @apply text-gray-200 flex-1 w-full max-w-4xl p-4 mx-auto min-h-full;
}

.faq h2 {
  @apply font-bold mt-4 mb-1;
}

.rules ol {
  list-style-type: decimal;
}

.rules li {
  display: list-item;
  list-style-position: inside;
  @apply my-2;
}

